<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Vista.ResgisterView.VistaRegistro"
    android:orientation="vertical"
    android:layout_margin="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_margin="10dp"/>

    <EditText
        android:id="@+id/nombreEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:drawableLeft="@drawable/ic_pass"
        android:hint="@string/nameComplete"
        android:drawableStart="@drawable/ic_namecomplete"
        android:drawablePadding="10dp"
        android:layout_margin="10dp"/>

    <EditText
        android:id="@+id/ususarioEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:drawableLeft="@drawable/ic_pass"
        android:hint="@string/username"
        android:drawableStart="@drawable/ic_username"
        android:drawablePadding="10dp"
        android:layout_margin="10dp"/>

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:drawableLeft="@drawable/ic_email"
        android:hint="@string/email"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="10dp"
        android:layout_margin="10dp"/>

    <EditText
        android:id="@+id/passREditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:drawableLeft="@drawable/ic_pass"
        android:hint="@string/pass"
        android:drawableStart="@drawable/ic_pass"
        android:drawablePadding="10dp"
        android:layout_margin="10dp"/>

    <EditText
        android:id="@+id/confirmarPassREditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:drawableLeft="@drawable/ic_pass"
        android:hint="@string/Confirmarpass"
        android:drawableStart="@drawable/ic_pass"
        android:drawablePadding="10dp"
        android:layout_margin="10dp"/>

    <Button
        android:id="@+id/btn_registrarUsu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/register"/>

    </LinearLayout>