<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Vista.Loginview.LoginActivity"
    android:orientation="vertical"
    android:layout_margin="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_margin="10dp"/>

   <EditText
       android:id="@+id/nameEditText"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:inputType="textEmailAddress"
       android:drawableLeft="@drawable/ic_email"
       android:hint="@string/email"
       android:drawableStart="@drawable/ic_email"
       android:drawablePadding="10dp"
       android:layout_margin="10dp"/>

    <EditText
        android:id="@+id/passEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textWebPassword"
        android:drawableLeft="@drawable/ic_pass"
        android:hint="@string/pass"
        android:drawableStart="@drawable/ic_pass"
        android:drawablePadding="10dp"
        android:layout_margin="10dp"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/login"/>
    <Button
        android:id="@+id/btn_registrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/registrarse"/>

</LinearLayout>