<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="300dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    android:layout_gravity="center"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/añadirProc"
            android:layout_gravity="center"
            android:textSize="20dp"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/img_producto"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:src="@drawable/ic_photo"/>

        <EditText
            android:id="@+id/nombreProduEdidText"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:hint="@string/nombreProdu"
            android:layout_margin="10dp"/>

        <EditText
            android:id="@+id/precioroduEdidText"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:hint="@string/precioProdu"
            android:layout_margin="10dp"
            android:inputType="number"/>

        <Button
            android:id="@+id/btn_añadirProdu"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:text="@string/añadirProc"
            android:layout_gravity="center"/>


    </LinearLayout>



</android.support.v7.widget.CardView>